Ikke funktionelle krav og accepttest for måleenhed

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -69,6 +69,7 @@
 \newcommand{\tsub}[1]{_{\textup{#1}}}
 \def\doubleunderline#1{\underline{\underline{#1}}}
 \usepackage[separate-uncertainty = true,multi-part-units=single]{siunitx}
+\usepackage{longtable}
 
 % XColor: Farver
 \usepackage[svgnames,dvipsnames,x11names]{xcolor}
