--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -18,12 +18,13 @@
 
 \subsection{Måleenhed}
 \label{subsec:ME}
+Kravene til målingerne i Måleenheden, er opgivet i en procent, da det ikke er relevant for vores "proof of concept"\  at gå dybere ned i målenøjagtighed og præcision. 
 \begin{enumerate}
-	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V
-	\item Måle spændingen med en præcision på $\pm$ 10mV
+	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms
+	\item Måle spændingen med en præcision på $\pm$ 10\%
 	\item Måle strømmen ved trinskifteren og forbrugerne mellem 0 og 500mA
-	\item Måle strømmen med en præcision på $\pm$ 10mA 
-	\item Beregne power factor med en præcision på $\pm$ 10$\%$
+	\item Måle strømmen med en præcision på $\pm$ 10\%
+	\item Måle og beregne power factor med en præcision på $\pm$ 10$\%$
 	\item Beregne THD med en præcision på $\pm$ 10$\%$
 \end{enumerate}
 
