--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
@@ -1,9 +1,9 @@
 % !TEX root = ../../prj4projektdokumentation.tex
 \section{Ikke funktionelle krav}
 % for spændingsregulator
-\begin{table}[htbp]
+\begin{table}[H]
 	\centering
-	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{3.5cm}|p{1cm}|}
+	\begin{tabular}{|p{4cm}|p{3cm}|p{3cm}|p{3cm}|p{1cm}|}
 		\hline
 		\textbf{Trintransformer} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
 		Nominel spænding på primærsiden er 24VAC & Spændingen på primærsiden måles. & Den målte værdi er 24VAC. & Der måles 23.88 VAC & \checkmark \\\hline
@@ -14,11 +14,11 @@
 \end{table}
 
 % for belastning
-\begin{table}[htbp]
+\begin{table}[H]
 	\centering
-	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
+	\begin{tabular}{|p{4cm}|p{3cm}|p{3cm}|p{3cm}|p{1cm}|}
 		\hline
-		\textbf{Belastning} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
+		\textbf{Belastning} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
 		Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. & Den givne modstand indsættes som belastning, og spændingen herover måles. & Spændingen over belastningen måles til 3,6V. & Den målte værdi er 3.61 VAC & \checkmark \\\hline	
 	\end{tabular}
 
@@ -26,13 +26,19 @@
 \end{table}
 
 % for måleenhed
-\begin{table}[htbp]
-	\centering
-	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
+%\begin{table}[htbp]
+%	\centering
+	\begin{longtable}{|p{4cm}|p{3cm}|p{3cm}|p{3cm}|p{1cm}|}
 		\hline
-		\textbf{Måleenhed} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
+		\textbf{Måleenhed} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
+		Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms & Måleenheden testes med spændinger fra 0 til 8Vrms, i intervaller af 500mV. & Korrekt spændingsmåling i hele intervallet. & Korrekte spændingsmålinger i hele intervallet & \checkmark\\\hline
+		Måle spændingen med en præcision på $\pm$ 10\%& Måleenheden påtrykkes en spænding på 3,5Vrms. Der laves herefter ti målinger& Gennemsnits afvigelsen forventes at være under $\pm$10\%.& Afvigelsen er fundet til 1,6\%. &\checkmark\\\hline
+		Måle strømmen ved trinskifteren og forbrugerne mellem 0 og 500mA& Måleenheden testes med strømme fra 0 til 500mA i intervaller af 50mA&Korrekt strømmåling i hele intervallet.&Korrekt strømmåling i hele intervallet&\checkmark\\\hline
+		Måle strømmen med en præcision på $\pm$ 10\%&Måleenheden påtrykkes en spænding på 300mVrms (Svarende til 300mArsm), der laves herefter ti målinger&Gennemsnits afvigelsen forventes at være under $\pm$10\%&Afvigelsen er fundet til 0,8\%.&\checkmark\\\hline
+		Måle og beregne power factor med en præcision på $\pm$ 10$\%$&Måleenheden måler power factor over en belastning på distributionslinjen, der sammenlignes med beregnet power factor&Afvigelsen forventes at være under $\pm$ 10\% &Afvigelsen er fundet til ??&xx\\\hline
+		Beregne THD med en præcision på $\pm$ 10$\%$&Måleenheden påtrykkes en firkantsignal med 1V amplituder og 1V offset. Der sammenlignes med beregnet THD for firkantsignal& Afvigelsen forventes at være under $\pm$ 10\%&Afvigelsen er fundet til 0,5\%&\checkmark\\\hline
 			
-	\end{tabular}
+	\end{longtable}
 	
 	
-\end{table}
+%\end{table}
