--- a/ProjektDokumentation/sektioner/Maale/Kalibrering.tex
+++ b/ProjektDokumentation/sektioner/Maale/Kalibrering.tex
@@ -69,7 +69,7 @@ Måleresultaterne fra kalibreringen findes i Tabel \ref{tab:MEkalibrering}. Samm
 	\label{tab:MEkalibrering}%
 \end{table}%
 
-\begin{figure}[htbp]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.80\textwidth]{Figure/MEkalibreringgraf}
 	\caption{Sammenhæng mellem faktiske spændinger og værdier i Måleenheden.}
