--- a/ProjektDokumentation/sektioner/Maale/THD.tex
+++ b/ProjektDokumentation/sektioner/Maale/THD.tex
@@ -2,7 +2,7 @@
 
 \subsection{Total Harmonic Distortion}
 
-Måleenheden er indeholder en funktion til beregning af Total Harmonic Distortion (THD). THD er et udtryk for hvor stort indholdet af overharmoniske frekvenser er i et givent signal. Signalet som Måleneheden måler på, består ideelt set kun af grundfrekvensen på 50Hz. 
+Måleenheden indeholder en funktion til beregning af Total Harmonic Distortion (THD). THD er et udtryk for hvor stort indholdet af overharmoniske frekvenser er i et givent signal. Signalet som Måleneheden måler på, består ideelt set kun af grundfrekvensen på 50Hz. 
 
 Udregningen af THD i Måleenheden udføres efter der er lavet Fourier analyse af signalet. Herefter udregnes THD ved at dele den kvadrede sum af alle overharmoniske amplituder med amplituden af den fundamentale frekvens. Den generelle formel for udregning af THD er vist i Ligning \ref{eq:THDgenerel}.
 \begin{align}
