--- a/ProjektDokumentation/sektioner/Arkitektur/BDD.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/BDD.tex
@@ -11,7 +11,7 @@ Et BDD for spændingsregulator ses på figur \ref{fig:BDDSpaendingsregulator}. P
 	\label{fig:BDDSpaendingsregulator}
 \end{figure}
 
-\textbf{Brugergrænsefladen} skal stå for formidle af måledata til brugeren gennem en skærm, men det er også her at brugeren skal kunne inteagere med systemet i manuel tilstand.
+\textbf{Brugergrænsefladen} står for at formidle måledata til brugeren gennem en skærm, men det er også her at brugeren skal kunne inteagere med systemet i manuel tilstand.
 
 \textbf{Måleenhed} står for at måle spænding, strøm og faseforskydningen herimellem. Ligeledes skal denne kunne måle indeholdet af harmoniske frekvenser. Den skal bestå af hardware til måling af de nævnte parametre og en PSoC. På enheden skal behandlingen af rådataet også ligge, så dette kan formidles til styringsenheden.
 
