--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -110,7 +110,7 @@ Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatisk
 	\begin{threeparttable}
 		\begin{tabularx}{\linewidth}{ l X }
 			\toprule
-			\bfseries{Navn:}				& UC3 - Skift trin  \\
+			\bfseries{Navn:}				& UC3a - Skift trin op  \\
 			\midrule
 			\bfseries{Mål:} 				& At skifte et trin op på transformeren \\
 			\midrule
@@ -148,7 +148,7 @@ Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatisk
 	\begin{threeparttable}
 		\begin{tabularx}{\linewidth}{ l X }
 			\toprule
-			\bfseries{Navn:}				& UC3 - Skift trin  \\
+			\bfseries{Navn:}				& UC3b - Skift trin ned  \\
 			\midrule
 			\bfseries{Mål:} 				& At skifte et trin ned på transformeren \\
 			\midrule
