div. smårettelser ved gennemlæsning

--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
@@ -34,7 +34,7 @@
 		Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms & Måleenheden testes med spændinger fra 0 til 8Vrms, i intervaller af 500mV. & Korrekt spændingsmåling i hele intervallet. & Korrekte spændingsmålinger i hele intervallet & \checkmark\\\hline
 		Måle spændingen med en præcision på $\pm$ 10\%& Måleenheden påtrykkes en spænding på 3,5Vrms. Der laves herefter ti målinger& Gennemsnits afvigelsen forventes at være under $\pm$10\%.& Afvigelsen er fundet til 1,6\%. &\checkmark\\\hline
 		Måle strømmen ved trinskifteren og forbrugerne mellem 0 og 500mA& Måleenheden testes med strømme fra 0 til 500mA i intervaller af 50mA&Korrekt strømmåling i hele intervallet.&Korrekt strømmåling i hele intervallet&\checkmark\\\hline
-		Måle strømmen med en præcision på $\pm$ 10\%&Måleenheden påtrykkes en spænding på 300mVrms (Svarende til 300mArsm), der laves herefter ti målinger&Gennemsnits afvigelsen forventes at være under $\pm$10\%&Afvigelsen er fundet til 0,8\%.&\checkmark\\\hline
+		Måle strømmen med en præcision på $\pm$ 10\%&Måleenheden påtrykkes en spænding på 300mVrms (Svarende til 300mA), der laves herefter ti målinger&Gennemsnits afvigelsen forventes at være under $\pm$10\%&Afvigelsen er fundet til 0,8\%.&\checkmark\\\hline
 		Måle og beregne power factor med en præcision på $\pm$ 10$\%$&Måleenheden måler power factor over en belastning på distributionslinjen, der sammenlignes med beregnet power factor&Afvigelsen forventes at være under $\pm$ 10\% &Afvigelsen er fundet til ??&xx\\\hline
 		Beregne THD med en præcision på $\pm$ 10$\%$&Måleenheden påtrykkes en firkantsignal med 1V amplituder og 1V offset. Der sammenlignes med beregnet THD for firkantsignal& Afvigelsen forventes at være under $\pm$ 10\%&Afvigelsen er fundet til 0,5\%&\checkmark\\\hline
 			
