--- a/ProjektDokumentation/sektioner/Arkitektur/BrugerGraenseFlade.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/BrugerGraenseFlade.tex
@@ -2,7 +2,7 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Brugergrænseflade}
-(Beskrivelse af skræm på PLC’en) \\
+(Beskrivelse af skærm på PLC’en) \\
 \subsection{Automatisk mode}
 \begin{figure}[H] % (alternativt [H])
 	\centering
