--- a/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
+++ b/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
@@ -12,7 +12,7 @@ Testene laves ved at måle på nettet med Måleenheden, som er forbundet til bru
 	\begin{tabular}{ | m{0.2\textwidth} | m{0.8\textwidth}|} 
 		\hline
 		\textbf{Test}					&Udregning og simulering passer med systemets værdier. \\ \hline
-		\textbf{Testbeskrivelse}		&Der testes ved at forsyne nettet med trintrinskifteren og derefter måle spænding, strøm og Pf med Måleenheden ved en forbruger \\ \hline
+		\textbf{Testbeskrivelse}		&Der testes ved at forsyne nettet med trinskifteren og derefter måle spænding, strøm og Pf med Måleenheden ved en forbruger \\ \hline
 		\textbf{Input}					&4Vrms fra trinskifter \\ \hline
 		\textbf{Forventet output}		&At resultaterne i tabel \ref{tab:intTest2} stemmer overens \\ \hline
 		\textbf{Resultat}				&Se tabel \ref{tab:intTest2} \\ \hline
