--- a/ProjektDokumentation/sektioner/Maale/THD.tex
+++ b/ProjektDokumentation/sektioner/Maale/THD.tex
@@ -27,7 +27,7 @@ Udregningen af THD i Måleenheden er testet ved at sammenligne med resultatet me
 
 
 
-\lstset{caption={Beregning af THD for firkantsignal i Matlab},label={list:THDMatlab}
+\lstset{caption={Beregning af THD for firkantsignal i Matlab},label={list:THDMatlab},
 			language=Matlab,
 			frame=single}
 \begin{lstlisting}[language=Matlab] 
