--- a/ProjektDokumentation/sektioner/Termliste.tex
+++ b/ProjektDokumentation/sektioner/Termliste.tex
@@ -11,7 +11,7 @@
 		\textbf{Term} 	& \textbf{Beskrivelse} \\\hline
 		Spændingsregulator	& Samlet system \\\hline
 		Trintransformer	& Transformer med variabelt omsætningsforhold \\\hline
-		Trinskifter	& Omfatter transtransformer og relækredsløb  \\\hline
+		Trinskifter	& Omfatter trintransformer og relækredsløb  \\\hline
 		Styringsenhed	& PLC, HMI og Arduino \\\hline
 		Centralt	& Ved trinskifter \\\hline
 		Decentralt 	& Ved forbrugeren \\\hline
