--- a/ProjektDokumentation/sektioner/Integrationstest/MaalTilPlc.tex
+++ b/ProjektDokumentation/sektioner/Integrationstest/MaalTilPlc.tex
@@ -26,7 +26,7 @@ Til testen skal der bruges:
 	\begin{tabular}{ | m{0.2\textwidth} | m{0.8\textwidth}|} 
 		\hline
 		\textbf{Test}					&Brugergrænsefladen modtager korrekte tal \\ \hline
-		\textbf{Testbeskrivelse}		&Der testes at de værdiger, der kommer ind på Måleenheden er ens me værdigerne der vises på brugergrænsefladen. \\ \hline
+		\textbf{Testbeskrivelse}		&Der testes at de værdier, der kommer ind på Måleenheden er ens med værdierne der vises på brugergrænsefladen. \\ \hline
 		\textbf{Input}					&4VPP sinus på spænding indgang, 1VPP sinus på strøm indgang, 3,3ms forskydning \\ \hline
 		\textbf{Forventet output}		&1,414V spænding, 0,354A strøm, 0,509 PF se figur \ref{fig:PFtest1}, 0 THD \\ \hline
 		\textbf{Resultat}				&1,404V spænding, 0,359A strøm, 0,491, 0,2 THD,  se figur \ref*{fig:visningtest1} for resultat af skærm  \\ \hline
